--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
+  margin: 0px;
+  background-color: gray;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -7,7 +8,29 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1 {
+  text-align: center;
+  margin: 0px;
+}
+
+.App {
+  margin: 20px;
+  background-color: whitesmoke;
+  border-radius: 25px;
+  border: 3px solid aquamarine;
+}
+
+.Header {
+  padding: 5px;
+  border-bottom: 9px double aquamarine;
+}
+
+.Taskbar {
+  background-color: lightgray;
+  padding: 5px;
+  text-align: right;
+}
+
+.Home {
+  border-top: 9px double aquamarine;
 }
