--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ button {
   text-align: right;
 }
 
-.navbar a {
+.navbar button {
   margin-left: 8px;
   padding: 3px;
   vertical-align: middle;
@@ -60,8 +60,9 @@ button {
   background-color: aliceblue;
 }
 
-.navbar a:hover {
+.navbar button:hover {
   background-color: gray;
+  cursor: pointer;
 }
 
 .main {
